syntax = "proto2";
message StreetAddresses{
	enum MemberType {
		NODE = 0;
		WAY = 1;
		RELATION = 2;
	}
	required string streetFullName = 1; // As in the OSM data untouched
	required string streetName = 2; // always in lowercase
	required uint32 streetType = 3;
	optional uint8 streetDirection = 4;
	// required uint64 phonetics = 5;

	repeated uint64 item = 10 [packed = true];
	repeated MemberType itemType = 11 [packed = true];

	repeated string unitNumber = 12;
	repeated uint32 streetNumber = 13 [packed = true];
	repeated string streetNumberSuffix = 14;

	repeated uint64 interpolations = 20 [packed = true];
	repeated uint32 interpolationStart = 21 [packed = true];
	repeated uint32 interpolationEnd = 22 [packed = true];
}
/*
message StreetGroup{
	required uint8 firstChar = 1;
	repeated StreetAddresses streets = 2;
	// centroid, in nanodegrees
	required uint64 lat = 10; 
	required uint64 lon = 11;
}
*/
